# llkms

./: .dockerignore  .env.example  .gitignore  Dockerfile  config.yaml  main.py  pyproject.toml  readme.md  requirements.txt  setup.py  sources.md
src/llkms/: main.py
src/llkms/utils/: interactive_query.py  logger.py
src/llkms/utils/aws/: s3_client.py
src/llkms/utils/langchain/: document_processor.py  model_factory.py  rag_pipeline.py  vector_store_manager.py
tests/: test_document_processor.py  test_logger.py  test_model_factory.py  test_vector_store_manager.py
utils/: interactive_query.py  logger.py  vector_store_manager.py
utils/aws/: s3_client.py
utils/langchain/: document_processor.py  rag_pipeline.py
